final fixes v1